# Hackathon-May

./: Dockerfile.prediction  README.md  docker-compose.yml  new.ipynb  requirements.txt
data/: landslide.csv  storms.csv
frontend/: .dockerignore  Dockerfile.prediction  docker-compose.yml  predict.py  pyproject.toml  run_app.py  setup.py
frontend/.github/workflows/: ci-cd.yml
frontend/config/: logging_config.json  workflow_config.yaml
frontend/disaster_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/kubernetes/: kustomization.yaml  persistent-volume-claims.yaml  streamlit-app-service.yaml
frontend/kubernetes/deployments/: airflow-deployment.yaml  disaster-prediction-deployment.yaml  streamlit-app-deployment.yaml
frontend/kubernetes/services/: disaster-prediction-service.yaml
frontend/streamlit_app/: .env  app.py  model_loader.py  model_unpickler.py  requirements.txt
frontend/streamlit_app/components/: map_visualization.py  risk_assessment.py
frontend/workflow/: disaster_workflow.py
kubernetes/services/: airflow-service.yaml
model/: disaster_risk_model.pkl  risk_model.pkl
streamlit_app/: app.py  predictor.py  requirements.txt
streamlit_app/components/: map_visualization.py  risk_assessment.py
streamlit_app/data/: world_map.geojson
workflow/: disaster_prediction_dag.py
